[package]
name = "ceresdbproto"
version = "0.1.0"
authors = ["CeresDB Authors <ceresdb@service.alipay.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
grpcio = "0.9.1"
protobuf = "2.20"

[build-dependencies.protobuf-builder]
git = "https://github.com/CeresDB/protobuf-builder.git"
rev = "745cc8527d1c5eb48745f5ce74b2b5bdb75c3bf2"
