[package]
name = "ceresdbproto"
version = "0.1.0"
authors = ["CeresDB Authors <ceresdb@service.alipay.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tonic = { version = "0.6.2", features = ["compression"] }
prost = "0.9"

[build-dependencies]
tonic-build = { version = "0.6.2", features = ["prost", "compression"] }
