[package]
name = "ceresdbproto"
version = "1.0.17"
authors = ["CeresDB Authors <ceresdbservice@gmail.com>"]
edition = "2021"
repository = "https://github.com/CeresDB/ceresdbproto"
license = "Apache-2.0"
description = "Protobuf specs for CeresDB"
readme = "../README.md"

[dependencies]
tonic = "0.8"
prost = "0.11"

[build-dependencies]
tonic-build = "0.8"
protoc-bin-vendored = "3.0.0"
walkdir = "2.3.2"
