# Copyright 2023 The HoraeDB Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "ceresdbproto"
version = "1.0.23"
authors = ["CeresDB Authors <ceresdbservice@gmail.com>"]
edition = "2021"
repository = "https://github.com/CeresDB/ceresdbproto"
license = "Apache-2.0"
description = "Protobuf specs for CeresDB"
readme = "../README.md"

[dependencies]
tonic = "0.8"
prost = "0.11"

[build-dependencies]
tonic-build = "0.8"
protoc-bin-vendored = "3.0.0"
walkdir = "2.3.2"
